objects/Setting_History__c.object
<CustomObject>
    <fields>
        <fullName>New_Data__c</fullName>
        <label>New Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Data__c</fullName>
        <label>Old_Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Console Setting</label>
        <referenceTo>Setting__c</referenceTo>
        <relationshipLabel>Setting Histories</relationshipLabel>
        <relationshipName>Setting_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Setting Histories</relationshipLabel>
        <relationshipName>Setting_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Setting History</label>
    <nameField>
        <label>Setting History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Setting Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>